prueba cambiando credenciales

--- a/.env
+++ b/.env
@@ -19,8 +19,8 @@ NODE_TLS_REJECT_UNAUTHORIZED=0
 
 SAIT_BASE_URL=https://rest.empresar-sys.com.ar:1433
 SAIT_BASE_URL_PROD=http://localhost
-SAIT_USER = bopera.hub.test
-SAIT_USER_PASSWORD = bopera.hub.test
+SAIT_USER = bopera.hub.tes
+SAIT_USER_PASSWORD = bopera.hub.tes
 SAIT_TOKEN_API="xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx"
 
 # MAIL
