--- a/.env
+++ b/.env
@@ -17,7 +17,7 @@ API_PORT =8081 APP_ENV=development
 NODE_TLS_REJECT_UNAUTHORIZED=0
 
 
-SAIT_BASE_URL=https://rest.empresar-sys.com.ar:1433
+SAIT_BASE_URL=https://testrest.empresar-sys.com.ar:1434
 SAIT_BASE_URL_PROD=http://localhost
 SAIT_USER = bopera.hub.tes
 SAIT_USER_PASSWORD = bopera.hub.tes
