--- a/.env
+++ b/.env
@@ -1,11 +1,11 @@
-# DB
+--------------------------------------------------
 DB_HOST = 192.168.156.118
 DB_PORT =3306
 DB_USERNAME =admin
 DB_PASSWORD =admin_123
 DB_NAME =backendnest
 
-# APP
+APP
 JWT_SECRET = secretKey
 EXPIRE_TOKEN_IN = 60m
 DEFAULT_USER_NAME = AdminDef
@@ -17,13 +17,13 @@ API_PORT =8081 APP_ENV=development
 NODE_TLS_REJECT_UNAUTHORIZED=0
 
 
-SAIT_BASE_URL=https://testrest.empresar-sys.com.ar:1434
-SAIT_BASE_URL_PROD=http://localhost
-SAIT_USER = bopera.hub.tes
-SAIT_USER_PASSWORD = bopera.hub.tes
+SAIT_BASE_URL=https://rest.empresar-sys.com.ar:1433/
+SAIT_BASE_URL_PROD=http://localhost/
+SAIT_USER = bopera.hub.usu
+SAIT_USER_PASSWORD = bopera.hub.usu
 SAIT_TOKEN_API="xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx"
 
-# MAIL
+MAIL
 MAIL_HOST=192.168.156.207
 MAIL_PORT=25
 MAIL_USER=_noreply@buspack.com.ar
