--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 # DB
-DB_HOST = 192.168.156.118
+DB_HOST = 192.168.156.131
 DB_PORT =3306
-DB_USERNAME =admin
-DB_PASSWORD =admin_123
+DB_USERNAME =app_buspack
+DB_PASSWORD =Guo*yE=n4wgCfn+axUr
 DB_NAME =backendnest
 
 # APP
